--- a/style.css
+++ b/style.css
@@ -7,3 +7,10 @@
 .form-group {
   width: 80%;
 }
+
+.header {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  background-color: yellow;
+}
