--- a/style.css
+++ b/style.css
@@ -14,3 +14,14 @@
   text-align: center;
   background-color: yellow;
 }
+
+.section-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.btn {
+  margin-top: 2%;
+  width: 30%;
+  align-self: center;
+}
